# InlineMonitor

./: CMakeLists.txt  CMakePresets.json  Скороходов_Д_В_Lab_1.docx  Скороходов_Д_В_Lab_4.docx
Hook/: CMakeLists.txt  IFileMonitor.h  LinFileMonitor.h  WinFileMonitor.h  inlineWinHook.h  observer.cpp
Monitor/: CMakeLists.txt  HMonitor.cpp  Monitor.cpp  Monitor.h  gnuInjector.cpp  gnuInjector.h  injector.h  winInjector.cpp  winInjector.h
Protocol/: CMakeLists.txt  MonitorClient.cpp  MonitorClient.h  MonitorServer.cpp  MonitorServer.h
